# GenLio

./: .env.example  .gitignore  COMMANDS.txt  README.md  START_HERE.txt  conftest.py  ist_to_utc.py  pyproject.toml  quick_start.sh  requirements.txt  run.py  test_start_command.py  vercel.json
.github/workflows/: daily.yml
api/: telegram.py
config/: __init__.py  brand.json  settings.py
data/: topic_bank.json
gelio/: __init__.py  approval.py  assets.py  compositor.py  content_writer.py  doctor.py  icons.py  llm.py  pdf_builder.py  pipeline.py  publisher.py  redact.py  schemas.py  store.py  supabase_store.py  sync.py  timeutil.py  topic_engine.py  validators.py  visual_gen.py  webhook.py
gelio/templates/: base.html.j2  cta.html.j2  hook.html.j2  insight.html.j2  styles.css
gelio/templates/partials/: decor.html.j2  eyebrow_chip.html.j2  logo_block.html.j2  panel.html.j2  stacked_headline.html.j2  step_badge.html.j2  subhead.html.j2  swipe_pill.html.j2  tip_bar.html.j2
supabase/: schema.sql
tests/: conftest.py  test_approval.py  test_compositor.py  test_content_writer.py  test_doctor.py  test_icons.py  test_pdf_builder.py  test_pipeline.py  test_publisher.py  test_redact.py  test_schemas.py  test_start_command.py  test_supabase_store.py  test_sync.py  test_timeutil.py  test_topic_engine.py  test_validators.py  test_visual_gen.py  test_webhook.py
