[project]
name = "gelio-webhook"
version = "0.5.0"
description = "gelio Telegram approval webhook (Phase 5) — the serverless slice"
requires-python = ">=3.11"
# Runtime deps for the Vercel function ONLY (api/telegram.py -> gelio.webhook ->
# approval/store/supabase_store/sync/publisher). This path is render-free, so it
# deliberately excludes the heavy generation/rendering deps (playwright,
# Pillow, pypdf, Jinja2) that only the GitHub Actions runner needs. Versions are
# kept in lockstep with requirements.txt.
dependencies = [
    "fastapi==0.115.0",
    "uvicorn==0.30.6",
    "httpx==0.27.2",
    "pydantic==2.9.2",
    "python-dotenv==1.0.1",
    "tenacity==9.0.0",
]

[tool.vercel]
entrypoint = "api.telegram:app"
